commit-26: deploy project as pwa to firebase hosting

--- a/src/pages/support/support.html
+++ b/src/pages/support/support.html
@@ -160,7 +160,7 @@
           </ion-textarea>
         </div>
       </ion-card-content>
-      <button ion-button block (click)="sendSuggestion()">SEND</button>
+      <button padding ion-button block (click)="sendSuggestion()">SEND</button>
     </ion-card>
   </div>
   <!--===== ADMIN VIEW SUGGESTION=====-->
