--- a/src/index.html
+++ b/src/index.html
@@ -12,20 +12,20 @@
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
   <!--for google maps javascripts sdk-->
-  <script src="http://maps.google.com/maps/api/js?key=AIzaSyAf1-QYPFKYvSP4zsgd1rAPgGv_vsEWCzE"></script>
+  <script src="https://maps.google.com/maps/api/js?key=AIzaSyAf1-QYPFKYvSP4zsgd1rAPgGv_vsEWCzE"></script>
   <!--<script src="http://maps.google.com/maps/api/js?key=AIzaSyCUtZsAxNcjgGO3w3YX-6GBq8XQKxIHF_A"></script>-->
  
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
-  <!-- un-comment this code to enable service worker
+   <!--un-comment this code to enable service worker-->
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
         .then(() => console.log('service worker installed'))
         .catch(err => console.error('Error', err));
     }
-  </script>-->
+  </script>
 
   <link href="build/main.css" rel="stylesheet">
 
