--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,15 @@
   <meta name="format-detection" content="telephone=no">
   <meta name="msapplication-tap-highlight" content="no">
 
-  <link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">
+  <!--<link rel="icon" type="image/x-icon" href="assets/icon/favicon.ico">-->
+  <link rel="icon" href="assets/imgs/logo_80x80.png">
+  <meta name="application-name" content="Real Estate">
   <link rel="manifest" href="manifest.json">
   <meta name="theme-color" content="#4e8ef7">
+  <!--config for PWA-->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <link rel="apple-touch-icon" href="assets/imgs/logo_80x80.png">
   <!--for google maps javascripts sdk-->
   <script src="https://maps.google.com/maps/api/js?key=AIzaSyAf1-QYPFKYvSP4zsgd1rAPgGv_vsEWCzE"></script>
   <!--<script src="http://maps.google.com/maps/api/js?key=AIzaSyCUtZsAxNcjgGO3w3YX-6GBq8XQKxIHF_A"></script>-->
@@ -45,3 +51,7 @@
 </body>
 
 </html>
+
+<!--
+  Credit to:
+  https://technology.amis.nl/2016/08/16/creating-near-native-mobile-web-app-aka-progressive-web-app-for-ios-with-ionic-2/-->
