--- a/src/pages/add-item/add-item.html
+++ b/src/pages/add-item/add-item.html
@@ -144,6 +144,8 @@
     <div *ngSwitchCase="'location'">
       <div #mapNewItem id="mapNewItem"></div>
     </div>
+    
+    <!--REVIEW AND SUBMIT-->
     <div *ngSwitchCase="'review'">
       <ion-card>
         <ion-item>
