--- a/src/pages/map/map.html
+++ b/src/pages/map/map.html
@@ -4,9 +4,12 @@
     <button ion-button menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title icon-left (click)="go2List()"><ion-icon name="swap"></ion-icon>Map</ion-title>
+    <ion-title icon-left (click)="go2List()"><ion-icon name="swap"></ion-icon>Map v.01</ion-title>
     <ion-buttons end>
-      <button ion-button (click)="addNew()"><ion-icon name="add"></ion-icon>Add</button>
+      <!--<button ion-button (click)="addNew()"><ion-icon name="add"></ion-icon>Add</button>-->
+    </ion-buttons> 
+    <ion-buttons end>
+      <button ion-button (click)="addNewItem()"><ion-icon name="add"></ion-icon>NEW</button>
     </ion-buttons> 
   </ion-navbar>
 </ion-header>
