--- a/src/pages/add-item-new/add-item-new.html
+++ b/src/pages/add-item-new/add-item-new.html
@@ -1,4 +1,4 @@
-<ion-tabs>
+<ion-tabs *ngIf="tabsEnabled">
   <ion-tab [root]="tab1Root" tabTitle="Info" tabIcon="information-circle"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Photo" tabIcon="camera"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Location" tabIcon="map"></ion-tab>
