commit-34: - add tips for ios + android - profile: if cordova not available, photo browser will be use - add local service: to hold local variable to exchange btw pages - add VERIFIED property to profile management

--- a/src/pages/account/account.html
+++ b/src/pages/account/account.html
@@ -22,7 +22,7 @@
       </ion-item>
     </form>
     <button ion-button block (click)="onSignIn(myForm)" [disabled]="!myForm.valid">Sign In</button>
-    <p (click)="go2SignUp()">Don't have account? Register here</p>
+    <p (click)="go2SignUp()">Don't have account? Register <span style="color:blue">HERE</span></p>
   </div>
   <div *ngIf="action==='sign-up'">
     <form #myForm1="ngForm">
