--- a/src/pages/add-item-new-tab2/add-item-new-tab2.html
+++ b/src/pages/add-item-new-tab2/add-item-new-tab2.html
@@ -1,12 +1,10 @@
-<!--
-  Generated template for the AddItemNewTab2Page page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
 
   <ion-navbar>
+    <button ion-button menuToggle>
+      <ion-icon name="menu"></ion-icon>
+    </button>
     <ion-title>Photos</ion-title>
   </ion-navbar>
 
@@ -19,16 +17,18 @@
           <label class="fileContainer">
             
             <img src="../../assets/imgs/camera.png" alt="" id="camera">
-            <input type="file" (change)="detectFiles($event)" multiple id="inputFile">
+            <input type="file" (change)="resizeSelectedImages($event)" multiple id="inputFile">
           </label>
         </div>
         <hr>
         <p>{{numberOfImages}} - photos selected</p>
-        
         <hr>
-        <div *ngFor="let resizedImageData of resizedImageDatas; let i=index" (click)="removeImage(i)" id="resizedImage">
-          <!--Image before resizing:-->
-          <img src="{{resizedImageData}}" alt="No image" id="resizedImage">
+      </div>
+
+
+      <div *ngFor="let image of images; let i = index">
+        <div *ngIf="image.isVisible">
+          <img src="{{image.imageURL}}" alt=""  (click)="onChangeImage(i)">
         </div>
       </div>
 </ion-content>
