--- a/src/pages/add-item-new/add-item-new.html
+++ b/src/pages/add-item-new/add-item-new.html
@@ -1,6 +1,6 @@
-<ion-tabs *ngIf="tabsEnabled">
+<ion-tabs>
   <ion-tab [root]="tab1Root" tabTitle="Info" tabIcon="information-circle"></ion-tab>
   <ion-tab [root]="tab2Root" tabTitle="Photo" tabIcon="camera"></ion-tab>
   <ion-tab [root]="tab3Root" tabTitle="Location" tabIcon="map"></ion-tab>
-  <ion-tab [root]="tab4Root" tabTitle="Review" tabIcon="home"></ion-tab>
+  <ion-tab [root]="tab4Root" tabTitle="Review" tabIcon="ios-cloud-done-outline"></ion-tab>
 </ion-tabs>
