--- a/src/pages/profile/profile.html
+++ b/src/pages/profile/profile.html
@@ -48,4 +48,8 @@
 
   </form>
   <button ion-button block (click)="onUpdateProfile(myForm)" [disabled]="!btnEnable">Update</button>
+
+  <!--for photo by browser-->
+  <input type="file" (change)="takePictureAndResizeByBrowser($event)" id="inputFilea" hidden>
+
 </ion-content>
