commit-35: specify the type of file can be upload: image

--- a/src/pages/add-item-new-tab2/add-item-new-tab2.html
+++ b/src/pages/add-item-new-tab2/add-item-new-tab2.html
@@ -17,7 +17,7 @@
           <label class="fileContainer">
             
             <img src="../../assets/imgs/camera.png" alt="" id="camera">
-            <input type="file" (change)="resizeSelectedImages($event)" multiple id="inputFile">
+            <input type="file" (change)="resizeSelectedImages($event)" multiple id="inputFile"  accept="image/*">
           </label>
         </div>
         <hr>
